src/test/deca/context/invalid/methodCall-moreParam.deca
class A{
    void m(int i){}
}
{
    A a;
    a.m(5 , 3463);
}
